[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"
view_graph = { path = "./dot-display" }

[build-dependencies]
tonic-build = "0.10.2"
